--- a/package.json
+++ b/package.json
@@ -10,8 +10,12 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.5.1",
+    "axios": "^1.6.8",
     "vue": "^3.4.21",
-    "vue-router": "^4.3.0"
+    "vue-axios": "^3.5.2",
+    "vue-cookies": "^1.8.3",
+    "vue-router": "^4.3.0",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.0.4",
