--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "vue-axios": "^3.5.2",
     "vue-cookies": "^1.8.3",
     "vue-router": "^4.3.0",
+    "vue-the-mask": "^0.11.1",
     "vuex": "^4.1.0"
   },
   "devDependencies": {
